[tool.poetry]
name = "badgerdoc"
version = "1.8.0"
description = ""
authors = ["BadgerDoc team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.0"
azure-storage-blob = "^12.21.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 79

[tool.isort]
profile = "black"
line_length = 79
