[project]
name = "badgerdoc-quality-gate"
version = "0.1.0"
description = "Quality Gates for `Badgerdoc 2`"
requires-python = ">=3.12"
dependencies = [
]

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "black>=25.12.0",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "pylint>=4.0.4",
    "types-aiofiles>=25.1.0",
    "types-markdown>=3.10.2.20260211",
]
mlx = [
    "mlx-vlm>=0.3.9",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[tool.black]
line-length = 79
target-version = ["py312"]
include = "\\.pyi?$"
extend-exclude = '''
/(
  # directories
  \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["web", "workflows"]

[tool.pylint]
disable = [
  "C0114",  # ignore docstring requirements to not pollute code with pointless docstrings
  "C0115",
  "C0116",
  "R0801",  # duplicate-line as we have to have type definitions shared between containers
  "C0301",  # line-too-long as it is solved by black
  "E0401",  # import-error as we use multiple containers
  "R0902",  # too-many-instance-attributes
  "R0903",  # too-few-public-methods
  "R0904",  # too-many-public-methods
  "R0911",  # too-many-return-statements
  "R0912",  # too-many-branches
  "R0913",  # too-many-arguments
  "R0914",  # too-many-locals
  "R0915",  # too-many-statements
  "R0917",  # too-many-positional-arguments
  "R1702",  # too-many-nested-blocks
  "W0718",  # broad-exception-caught
  "C0302",  # too-many-lines
]
ignore = [
  ".venv",
  "tests",
  "migrations",  # ignore django autogenerated migrations
  "apps.py",  # ignore apps.py django file used for auto-discovery
  "frontend",
]
max-line-length = 79

[tool.mypy]
python_version = "3.12"
disable_error_code = ["var-annotated", "attr-defined"]
ignore_missing_imports = true
strict = false
exclude = "\\.venv|tests"

[tool.uv.workspace]
members = [
    "docs",
]
