[tool.poetry]
name = "annotation"
version = "0.1.0"
description = "Annotation microservice for BadgerDoc project"
authors = ["BadgerDoc team"]

[tool.poetry.dependencies]
python = "^3.8.0"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
SQLAlchemy = "1.3.24"
psycopg2-binary = "^2.9.1"
alembic = "^1.6.5"
python-dotenv = "^0.19.0"
PyYAML = "^5.4.1"
boto3 = "^1.18.46"
requests = "^2.26.0"
cryptography = "^36.0.1"
cachetools = "^5.0.0"
kafka-python = "^2.0.2"
sqlalchemy-utils = "^0.38.3"
lru-dict = "1.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.14.0"
commitizen = "^2.18.0"
black = "^22.3.0"
flake8 = "^3.9.2"
pytest = "^6.2.4"
isort = "^5.13.2"
responses = "^0.14.0"
moto = {extras = ["s3"], version = "^2.2.8"}
pytest-cov = "^3.0.0"
click = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
