[tool.poetry]
name = "annotation"
version = "0.1.0"
description = "Annotation microservice for BadgerDoc project"
authors = ["BadgerDoc team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
SQLAlchemy = "^2.0.23"
psycopg2-binary = "^2.9.1"
alembic = "^1.6.5"
python-dotenv = "^0.19.0"
PyYAML = "^6.0"
requests = "^2.26.0"
cryptography = "^36.0.1"
cachetools = "^5.0.0"
sqlalchemy-utils = "^0.38.3"
badgerdoc-storage = { path = "../lib/badgerdoc_storage" }
aiohttp = "^3.10.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.14.0"
commitizen = "^2.18.0"
black = "^24.8.0"
flake8 = "^6.0.0"
pytest = "^8.2"
isort = "^5.13.2"
responses = "^0.14.0"
moto = { extras = ["s3"], version = "^4.0.0" }
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.24.0"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 79

[tool.isort]
profile = "black"
line_length = 79
