[tool.poetry]
name = "assets"
version = "0.1.0"
description = "Assets microservice for BadgerDoc project"
authors = ["BadgerDoc team"]

[tool.poetry.dependencies]
python = "^3.8.0"
sqlalchemy = "1.3.24"
fastapi = { extras = ["all"], version = "^0.80.0" }
uvicorn = "^0.15.0"
psycopg2-binary = "*"
python-dotenv = "*"
alembic = "*"
python-multipart = "*"
minio = "*"
pdf2image = "*"
python-magic = "*"
sqlalchemy-filters = "*"
importlib-resources = "*"
boto3 = "*"
requests = "*"
epam-indigo = "^1.18.0"

[tool.poetry.dev-dependencies]
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
isort = "*"
black = "*"
mypy = "*"
pylint = "*"
types-requests = "*"
sqlalchemy-utils = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
