[tool.poetry]
name = "assets"
version = "0.1.0"
description = "Assets microservice for BadgerDoc project"
authors = ["BadgerDoc team"]

[tool.poetry.dependencies]
python = "^3.12.0"
sqlalchemy = "1.3.24"
fastapi = { extras = ["all"], version = "^0.115.0" }
uvicorn = "^0.34.0"
psycopg2-binary = "*"
python-dotenv = "*"
alembic = "*"
python-multipart = "*"
minio = "*"
pdf2image = "*"
python-magic = "*"
sqlalchemy-filters = "*"
importlib-resources = "*"
requests = "*"
epam-indigo = "^1.18.0"
badgerdoc-storage = { path = "../lib/badgerdoc_storage" }
pymupdf = "^1.24.9"
pdfplumber = "^0.11.4"
pymupdf-fonts = "^1.0.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
isort = "*"
black = "*"
mypy = "*"
pylint = "*"
types-requests = "*"
sqlalchemy-utils = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
