[tool.poetry]
name = "dev-runner"
version = "0.1.0"
description = "run badgerdoc services locally"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "dev_runner"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "8.0.3"
aiocache = "0.11.1"
aiokafka = "0.7.2"
aiosignal = "1.2.0"
asgiref = "3.5.0"
async-timeout = "4.0.2"
attrs = "21.4.0"
boto3 = "1.20.54"
botocore = "1.23.54"
certifi = "2021.10.8"
cffi = "1.15.0"
charset-normalizer = "2.0.12"
colorama = "0.4.6"
cryptography = "36.0.0"
elasticsearch = {version = "7.13.4", extras = ["async"]}
frozenlist = "1.3.0"
h11 = "0.13.0"
idna = "3.3"
jmespath = "0.10.0"
kafka-python = "2.0.2"
multidict = "6.0.2"
pycparser = "2.21"
pydantic = "1.8.2"
python-dateutil = "2.8.2"
python-dotenv = "0.19.1"
pyyaml = "6.0"
s3transfer = "0.5.1"
six = "1.16.0"
typing-extensions = "4.1.1"
urllib3 = ">=1.26.8,<1.27.0"
uvicorn = "0.15.0"
yarl = "1.7.2"
alembic = "1.7.5"
cachetools = "4.2.4"
importlib-metadata = "4.11.0"
importlib-resources = "5.4.0"
mako = "1.1.6"
markupsafe = "2.0.1"
psycopg2-binary = "2.9.1"
requests = "2.26.0"
sqlalchemy-utils = "*"
sqlalchemy = "*"
zipp = "3.7.0"
anyio = "3.5.0"
boto3-stubs = "1.21.1"
botocore-stubs = "1.24.1"
chardet = "4.0.0"
minio = "7.1.0"
mypy-extensions = "0.4.3"
pdfminer-six = "20200517"
pdfplumber = "0.5.28"
pillow = "9.0.1"
pycryptodome = "3.12.0"
sniffio = "1.2.0"
sortedcontainers = "2.4.0"
wand = "0.6.7"
bcrypt = "3.2.0"
google-auth = "2.3.3"
kubernetes = "19.15.0"
oauthlib = "3.1.1"
paramiko = "2.10.3"
pyasn1-modules = "0.2.8"
pyasn1 = "0.4.8"
pyjwt = {version = "2.3.0", extras = ["crypto"]}
pynacl = "1.5.0"
python-multipart = "0.0.5"
requests-oauthlib = "1.3.0"
rsa = "4.8"
websocket-client = "1.2.3"
async-cache = "1.1.1"
numpy = "1.22.3"
types-requests = "2.27.16"
types-urllib3 = "1.26.11"
httpcore = "0.16.2"
httpx = "0.23.1"
rfc3986 = {version = "1.5.0", extras = ["idna2008"]}
pdf2image = "1.16.0"
python-magic = "0.4.25"
sqlalchemy-filters = "0.12.0"
pytest = "6.2.5"
setuptools = ">=60.5.0,<60.6.0"
freezegun = ">=1.1.0,<1.2.0"
email-validator = "1.1.3"
apscheduler = "3.9.1"
fastapi = "*"
aiohttp = "*"
starlette = "*"
tenant-dependency = {path = "../lib/tenants"}
filter-lib = {path = "../lib/filter_lib"}
python-magic-bin = "^0.4.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
