[tool.poetry]
name = "dev-runner"
version = "0.1.0"
description = "run badgerdoc services locally"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "dev_runner"}]

[tool.poetry.dependencies]
python = "^3.9"
aiocache = "0.11.1"
async-timeout = "4.0.2"
elasticsearch = {version = "7.13.4", extras = ["async"]}
kafka-python = "2.0.2"
python-dateutil = "2.8.2"
six = "1.16.0"
chardet = "4.0.0"
mypy-extensions = "0.4.4"
pdfminer-six = "20200517"
pdfplumber = "0.5.28"
pycryptodome = "3.17"
pymupdf-fonts = "1.0.5"
pymupdf = "1.21.1"
sortedcontainers = "2.4.0"
types-awscrt = "0.16.4"
wand = "0.6.11"
bcrypt = "4.0.1"
google-auth = "2.15.0"
kubernetes = "19.15.0"
oauthlib = "3.2.2"
paramiko = "2.12.0"
pyasn1-modules = "0.2.8"
pyasn1 = "0.4.8"
pynacl = "1.5.0"
python-multipart = "0.0.5"
rsa = "4.9"
async-cache = "1.1.1"
numpy = "1.24.1"
httpcore = "0.16.2"
httpx = "0.23.1"
exceptiongroup = "1.0.4"
iniconfig = "1.1.1"
packaging = "22.0"
pdf2image = "1.16.0"
pluggy = "1.0.0"
pytest = "7.2.0"
python-magic = "0.4.25"
tomli = "2.0.1"
sqlalchemy-utils = "*"
pyjwt = "*"
email-validator = "1.1.3"
apscheduler = "3.9.1"
starlette = "*"
fastapi = "*"
aiohttp = "*"
sqlalchemy = "*"
aiosignal = "*"
alembic = "*"
anyio = "*"
asgiref = "*"
attrs = "*"
boto3 = "*"
botocore = "*"
cachetools = "*"
certifi = "*"
cffi = "*"
charset-normalizer = "*"
click = "*"
colorama = "*"
cryptography = "*"
h11 = "*"
idna = "*"
importlib-metadata = "*"
importlib-resources = "*"
jmespath = "*"
mako = "*"
markupsafe = "*"
pillow = "*"
psycopg2-binary = "*"
pycparser = "*"
pydantic = "*"
python-dotenv = "*"
pyyaml = "*"
requests = "*"
s3transfer = "*"
setuptools = "*"
typing-extensions = "*"
urllib3 = "*"
uvicorn = "*"
yarl = "*"
zipp = "*"
frozenlist = "*"
minio = "*"
multidict = "*"
sniffio = "*"
aiokafka = "*"
websocket-client = "*"
tenant-dependency = {path = "../lib/tenants"}
filter-lib = {path = "../lib/filter_lib"}
python-magic-bin = "^0.4.14"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
