[tool.poetry]
name = "dev-runner"
version = "0.1.0"
description = "run badgerdoc services locally"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "dev_runner"}]

[tool.poetry.dependencies]
python = "^3.9"
requests-oauthlib = "1.3.1"
rfc3986 = {version = "1.5.0", extras = ["idna2008"]}
aiocache = "0.11.1"
aiokafka = "0.7.2"
asgiref = "3.5.0"
async-timeout = "4.0.2"
attrs = "22.2.0"
boto3 = "1.20.54"
botocore = "1.23.54"
certifi = "2021.10.8"
cffi = "1.15.1"
charset-normalizer = "2.0.12"
click = "8.0.3"
colorama = "0.4.6"
cryptography = "36.0.0"
elasticsearch = {version = "7.13.4", extras = ["async"]}
frozenlist = "1.3.3"
h11 = "0.13.0"
idna = "3.3"
jmespath = "0.10.0"
kafka-python = "2.0.2"
multidict = "6.0.4"
pycparser = "2.21"
pydantic = "1.8.2"
python-dateutil = "2.8.2"
python-dotenv = "0.19.1"
pyyaml = "6.0"
s3transfer = "0.5.1"
six = "1.16.0"
typing-extensions = "4.1.1"
urllib3 = ">=1.26.8,<1.27.0"
uvicorn = "0.15.0"
yarl = "1.8.2"
cachetools = "5.2.0"
importlib-metadata = "4.11.0"
importlib-resources = "5.4.0"
mako = "1.1.6"
markupsafe = "2.0.1"
psycopg2-binary = "2.9.1"
requests = "2.26.0"
zipp = "3.7.0"
anyio = "3.5.0"
boto3-stubs = "1.26.64"
botocore-stubs = "1.29.64"
chardet = "4.0.0"
minio = "7.1.0"
mypy-extensions = "0.4.4"
pdfminer-six = "20200517"
pdfplumber = "0.5.28"
pillow = "9.0.1"
pycryptodome = "3.17"
pymupdf-fonts = "1.0.5"
pymupdf = "1.21.1"
sniffio = "1.2.0"
sortedcontainers = "2.4.0"
types-awscrt = "0.16.4"
types-s3transfer = "0.6.0.post5"
wand = "0.6.11"
bcrypt = "4.0.1"
google-auth = "2.15.0"
kubernetes = "19.15.0"
oauthlib = "3.2.2"
paramiko = "2.12.0"
pyasn1-modules = "0.2.8"
pyasn1 = "0.4.8"
pyjwt = {version = "2.3.0", extras = ["crypto"]}
pynacl = "1.5.0"
python-multipart = "0.0.5"
rsa = "4.9"
setuptools = ">=60.5.0,<60.6.0"
websocket-client = "1.4.2"
async-cache = "1.1.1"
numpy = "1.24.1"
types-requests = "2.28.11.7"
types-urllib3 = "1.26.25.4"
httpcore = "0.16.2"
httpx = "0.23.1"
exceptiongroup = "1.0.4"
iniconfig = "1.1.1"
packaging = "22.0"
pdf2image = "1.16.0"
pluggy = "1.0.0"
pytest = "7.2.0"
python-magic = "0.4.25"
tomli = "2.0.1"
sqlalchemy-utils = "*"
email-validator = "1.1.3"
apscheduler = "3.9.1"
starlette = "*"
fastapi = "*"
aiohttp = "*"
sqlalchemy = "*"
aiosignal = "*"
alembic = "*"
tenant-dependency = {path = "../lib/tenants"}
filter-lib = {path = "../lib/filter_lib"}
python-magic-bin = "^0.4.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
