[tool.poetry]
name = "scheduler"
version = "0.1.0"
description = "Scheduler microservice for BadgerDoc project"
authors = ["BadgerDoc team"]

[tool.poetry.dependencies]
python = "^3.8.1"
aiohttp = "^3.8.1"
aiokafka = "^0.7.2"
python-dotenv = "^0.19.2"
psycopg2-binary = "^2.9.1"
sqlalchemy = "1.3.24"
SQLAlchemy-Utils = "^0.37.8"
alembic = "^1.7.5"
fastapi = "^0.68.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
requests = "^2.28.1"
freezegun = "^1.2.2"
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
