[tool.poetry]
name = "taxonomy"
version = "0.1.0"
description = "Taxonomy microservice for Badgerdoc project"
authors = ["Badgerdoc-search team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.0"
fastapi = "^0.87.0"
uvicorn = "^0.19.0"
sqlalchemy = "1.3.23"
sqlalchemy-utils = "^0.38.3"
alembic = "^1.8.1"
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.5"
httpx = "0.23.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.14.0"
black = "^22.3.0"
flake8 = "^3.9.2"
pytest = "^6.2.4"
isort = "^5.9.3"
responses = "^0.14.0"
pytest-cov = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
