[tool.poetry]
name = "users"
version = "0.1.0"
description = "Users microservice for Badgerdoc project"
authors = ["BadgerDoc team"]

[tool.poetry.dependencies]
python = "^3.8.0"
fastapi = "^0.68.1"
pydantic = "^1.8.2"
aiohttp = "^3.8.1"
requests = "^2.26.0"
uvicorn = "^0.15.0"
python-dotenv = "^0.19.1"
python-multipart = "^0.0.5"
minio = "^7.1.0"
cryptography = "^37.0.0"
email-validator = "^1.1.3"
apscheduler = "^3.9.1"
pyjwt = "^2.6.0"
badgerdoc-storage = { path = "../lib/badgerdoc_storage" }

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "^3.9.2"
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
