[tool.poetry]
name = "users"
version = "0.1.0"
description = "Users microservice for Badgerdoc project"
authors = ["BadgerDoc team"]

[tool.poetry.dependencies]
python = "^3.12.1"
fastapi = "^0.107.0"
aiohttp = "^3.8.1"
requests = "^2.26.0"
uvicorn = "^0.34.0"
python-dotenv = "^0.19.1"
python-multipart = "0.0.19"
minio = "^7.1.0"
cryptography = "44.0.1"
email-validator = "^2.2.0"
apscheduler = "^3.9.1"
pyjwt = "^2.6.0"
badgerdoc-storage = { path = "../lib/badgerdoc_storage" }
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "^7.2.0"
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
