[project]
name = "badgerdoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.7",
    "django-filter>=24.3",
    "django-storages>=1.14.6",
    "boto3>=1.40.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=22.0.0",
    "psycopg2-binary>=2.9.0",
    "djangorestframework>=3.15.2",
    "temporalio>=1.18.2",
    "drf-yasg>=1.21.7",
    "sentry-sdk>=2.50.0",
    "hocr-spec>=0.2.0",
    "lxml>=6.0.2",
    "pillow>=11.0.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-mermaid2-plugin>=1.1.0",
    "mkdocs-material>=9.5.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "pre-commit>=4.3.0",
    "pytest>=8.4.0",
]
