[tool.poetry]
name = "minio-service"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"
minio = "^7.1.1"
mypy-extensions = "^0.4.3"

[tool.poetry.scripts]
add-logging = "commands:add_logger"
get-setup = "commands:get_setup"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = "79"

[tool.isort]
profile = "black"

[tool.pylint.settings]
errors-only = "True"
disable = "E0401,E0611"
max-line-length = "79"

[tool.mypy]
ignore_missing_imports = true
scripts_are_modules = true
allow_untyped_decorators = true
strict = true
no_strict_optional = true
