[tool.poetry]
name = "badgerdoc-storage"
version = "0.1.0"
description = "Library for interacting with various blob or file storage systems."
authors = ["Ruslan Khyurri <ruslan.khyurri@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "badgerdoc_storage", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "1.34.144"
azure-storage-blob = "12.20.0"
azure-identity = "1.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
