[project]
name = "badgerdoc-common"
version = "0.1.0"
description = "BadgerDoc common utilities and helpers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.18.2",
    "aiohttp>=3.13.2",
    "aioboto3>=15.1.0",
    "sentry-sdk>=2.50.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
