[project]
name = "badgerdoc-ocr-deepseek-2"
version = "0.1.0"
description = "BadgerDoc OCR utilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.18.2",
    "aiohttp>=3.13.2",
    "badgerdoc-common",
    "lxml>=6.0.2",
    "markdown>=3.10.2"
]

[tool.uv.sources]
badgerdoc-common = { path = "../badgerdoc_common" }

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
