[project]
name = "badgerdoc-ocr-dotsocr"
version = "0.1.0"
description = "BadgerDoc OCR Dots.OCR"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "temporalio>=1.18.2",
    "aiohttp>=3.13.2",
    "badgerdoc-common",
    "pillow>=12.1.1",
    "openai>=2.24.0",
    "lxml>=6.0.2",
    "markdown>=3.10.2",
]

[dependency-groups]
dev = [
    "hocr-spec>=0.2.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=0.23.0",
    "types-lxml>=2026.2.16",
    "types-markdown>=3.10.2.20260211",
]
common = [
    "badgerdoc-common",
]

[tool.uv.sources]
badgerdoc-common = { path = "../badgerdoc_common" }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
