[project]
name = "badgerdoc-ocr-mineru"
version = "0.2.0"
description = "BadgerDoc OCR MinerU (MLX backend via mlx_vlm.server)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.18.2",
    "aiohttp>=3.13.2",
    "badgerdoc-common",
    "mineru-vl-utils>=0.1.0",
    "tqdm>=4.0.0",
]

[tool.uv.sources]
badgerdoc-common = { path = "../badgerdoc_common", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
